# FeatherPad

./: CMakeLists.txt  ChangeLog  INSTALL  NEWS  README  README.md  README_OS2.md  featherpad_es_ES.ts  fp.pro
cmake/Modules/: FindHUNSPELL.cmake
featherpad/: CMakeLists.txt  about.ui  brackets.cpp  config.cpp  config.h  encoding.cpp  encoding.h  featherpad.pro  filedialog.h  find.cpp  fontDialog.cpp  fontDialog.h  fontDialog.ui  fp.ui  fpwin.cpp  fpwin.h  highlighter-css.cpp  highlighter-heredoc.cpp  highlighter-html.cpp  highlighter-java.cpp  highlighter-json.cpp  highlighter-jsregex.cpp  highlighter-pascal.cpp  highlighter-patterns.cpp  highlighter-perl-regex.cpp  highlighter-regex.cpp  highlighter-sh.cpp  highlighter.cpp  highlighter.h  lineedit.cpp  lineedit.h  loading.cpp  loading.h  main.cpp  menubartitle.cpp  menubartitle.h  messagebox.h  org.featherpad.Application.xml  predDialog.ui  pref.cpp  (+38 more)
featherpad/data/: featherpad.desktop  featherpad.metainfo.xml  featherpad_os2.rc  fp.qrc  help  help_ca  help_ja_JP
featherpad/data/translations/: featherpad.ts  featherpad_ar_DZ.ts  featherpad_bg.ts  featherpad_ca.ts  featherpad_cs.ts  featherpad_cy.ts  featherpad_da.ts  featherpad_de.ts  featherpad_el.ts  featherpad_eo.ts  featherpad_es.ts  featherpad_es_ES.ts  featherpad_et.ts  featherpad_fa.ts  featherpad_fi.ts  featherpad_fr.ts  featherpad_he.ts  featherpad_hi.ts  featherpad_hr.ts  featherpad_hu.ts  featherpad_id.ts  featherpad_it.ts  featherpad_ja.ts  featherpad_ja_JP.ts  featherpad_ka.ts  featherpad_ko.ts  featherpad_lt.ts  featherpad_nb_NO.ts  featherpad_nl.ts  featherpad_pl.ts  featherpad_pt.ts  featherpad_pt_BR.ts  featherpad_pt_PT.ts  featherpad_ru.ts  featherpad_si.ts  featherpad_sk_SK.ts  featherpad_sl.ts  featherpad_sv.ts  featherpad_tr.ts  featherpad_uk.ts  (+2 more)
featherpad/highlighter/: highlighter-cmake.cpp  highlighter-css.cpp  highlighter-fountain.cpp  highlighter-html.cpp  highlighter-java.cpp  highlighter-json.cpp  highlighter-lua.cpp  highlighter-markdown.cpp  highlighter-pascal.cpp  highlighter-patterns.cpp  highlighter-perl-regex.cpp  highlighter-regex.cpp  highlighter-rest.cpp  highlighter-ruby.cpp  highlighter-rust.cpp  highlighter-sh.cpp  highlighter-tcl.cpp  highlighter-toml.cpp  highlighter-xml.cpp  highlighter-yaml.cpp  highlighter.cpp  highlighter.h
